# cpp_homework

hw_2_sem/: CMakeLists.txt
hw_2_sem/finite/: CMakeLists.txt  finite.h  tests.cpp
hw_2_sem/finite/common/: CMakeLists.txt  tests.cpp  type_traits.h
hw_2_sem/matrix_task/: CMakeLists.txt
hw_2_sem/matrix_task/biginteger/: CMakeLists.txt  biginteger.h  fast_fourier_transform.cpp  rational.h
hw_2_sem/matrix_task/common/: CMakeLists.txt  type_traits.h
hw_2_sem/matrix_task/finite/: CMakeLists.txt  finite.h
hw_2_sem/matrix_task/matrix/: CMakeLists.txt  matrix.h
hw_2_sem/matrix_task/test/: CMakeLists.txt  finite_test.cpp  matrix_test.cpp  type_traits_test.cpp
hw_2_sem/next_permutation_subset/: CMakeLists.txt
hw_2_sem/next_permutation_subset/splay/: CMakeLists.txt  splay.h
hw_2_sem/next_permutation_subset/task_contest/: main  main.cpp
hw_2_sem/next_permutation_subset/test/: CMakeLists.txt  help.h  splay_test.cpp
